--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -15,153 +15,154 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="icon" type="image/png" href="static/images/icons/dash_logo.png" />
-  <link rel="stylesheet" href="static/css/home.css"/>
+  <link rel="stylesheet" href="static/css/home.css" />
 
   <!--==========================necessary for loginout drop down???? only on this page=====================================================================-->
-  
 
-    <nav class="navbar navbar-expand-lg navbar-dark" style = "background: #3B8DE1;">
-      <a class="navbar-brand" href="..">Dash</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="/todo">To-Do</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/grades">Grades</a>
-              </li>
-              <li class="nav-item">
-              <a class="nav-link" href="/calendar">Events</a>
-            </li>
-            <li class="nav-item">
-                  <a class="nav-link" href="/calendar/view">Calendar</a>
-              </li>
-          </ul>
-          <!-- Topbar Navbar -->
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item dropdown no-arrow">
-                  <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">
-                      <span class="mr-2 d-none d-lg-inline text-gray-600">{{user.get_short_name}}</span>
-                  </a>
-                  <!-- Dropdown - User Information -->
-                  <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                      aria-labelledby="userDropdown">
-                      <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                          <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                          Logout
-                      </a>
-                  </div>
-              </li>
-          </ul>
-      </div>
+
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background: #3B8DE1;">
+    <a class="navbar-brand" href="..">Dash</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/todo">To-Do</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/grades">Grades</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/calendar">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/calendar/view">Calendar</a>
+        </li>
+      </ul>
+      <!-- Topbar Navbar -->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown no-arrow">
+          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <span class="mr-2 d-none d-lg-inline text-gray-600">{{user.get_short_name}}</span>
+          </a>
+          <!-- Dropdown - User Information -->
+          <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+              <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+              Logout
+            </a>
+          </div>
+        </li>
+      </ul>
+    </div>
   </nav>
   <!-- Logout Modal-->
   <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+          <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-              <!-- todo  -->
-                <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary"><center>Click the icons below to use your Dashboard!</center></h6>
-                </div>
-                <div class="card-body">
-                  <div class="card text-center">
-                    <div class="card-group" style = "margin-top: 20px;">
-                      <div class="card text-center" style="width: 18rem;">
-                        <div class="card-header">
-                          Todo
-                        </div>
-                          <div>
-                              <a href="/todo">
-                          <img src="https://img.icons8.com/windows/96/000000/scroll.png"/>
-                              </a>
-                          </div>
-                      </div>
-  
-                      <div class="card text-center" style="width: 18rem;">
-                        <div class="card-header">
-                          Grades
-                        </div>
-                          <div>
-                              <a href="/grades">
-                          <img src="https://img.icons8.com/windows/96/000000/grades.png"/>
-                              </a>
-                          </div>
-                      </div>
-  
-                      <div class="card text-center" style="width: 18rem;">
-                        <div class="card-header">
-                          Events
-                        </div>
-                          <div>
-                              <a href="/calendar">
-                         <img src="https://img.icons8.com/windows/96/000000/calendar-27.png"/>
-                              </a>
-                          </div>
-                      </div>
-  
-                      <div class="card text-center" style="width: 18rem;">
-                        <div class="card-header">
-                          Calendar
-                        </div>
-                          <div>
-                              <a href="/calendar/view">
-                              <img src="https://img.icons8.com/windows/96/000000/calendar.png"/>
-                              </a>
-                          </div>
-                      </div>
-                    </div>
-                </div>
-                    <center>
-                    <p>&copy asdfghjkl 2020</p>
-                    <a href="icons8.com/">Icons courtesy of icons8.com</a>
-                    </center>
-                </div>
+  <!-- todo  -->
+  <div class="card-header py-3">
+    <h6 class="m-0 font-weight-bold text-primary">
+      <center>Click the icons below to use your Dashboard!</center>
+    </h6>
+  </div>
+  <div class="card-body">
+    <div class="card text-center">
+      <div class="card-group" style="margin-top: 20px;">
+        <div class="card text-center" style="width: 18rem;">
+          <div class="card-header">
+            Todo
+          </div>
+          <div>
+            <a href="/todo">
+              <img src="https://img.icons8.com/windows/96/000000/scroll.png" />
+            </a>
+          </div>
+        </div>
 
+        <div class="card text-center" style="width: 18rem;">
+          <div class="card-header">
+            Grades
+          </div>
+          <div>
+            <a href="/grades">
+              <img src="https://img.icons8.com/windows/96/000000/grades.png" />
+            </a>
+          </div>
+        </div>
 
-      {% else %}
-      <link rel="icon" type="image/png" href="static/images/icons/dash_logo.png" />
-      <link rel="stylesheet" type="text/css" href="static/css/util.css">
-      <link rel="stylesheet" type="text/css" href="static/css/main.css">
-      <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-      <!-- <link rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/demo/css/style.css"> -->
-      <link rel="stylesheet" media="screen" href="static/css/login.css">
-      <div id="particles-js">
-        <div class="LoginContainer gradient-border" id="box">
-          <div class="loginInner">
-            <form class="login100-form validate-form flex-sb flex-w">
-              <span class="login100-form-title p-b-53">Welcome to Dash</span>
-              <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn-google m-b-20">
-                <img
-                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">Login
-                with Google</a>
-            </form>
+        <div class="card text-center" style="width: 18rem;">
+          <div class="card-header">
+            Events
+          </div>
+          <div>
+            <a href="/calendar">
+              <img src="https://img.icons8.com/windows/96/000000/calendar-27.png" />
+            </a>
+          </div>
+        </div>
+
+        <div class="card text-center" style="width: 18rem;">
+          <div class="card-header">
+            Calendar
+          </div>
+          <div>
+            <a href="/calendar/view">
+              <img src="https://img.icons8.com/windows/96/000000/calendar.png" />
+            </a>
           </div>
         </div>
       </div>
+    </div>
+    <center>
+      <p>&copy asdfghjkl 2020</p>
+      <a href="icons8.com/">Icons courtesy of icons8.com</a>
+    </center>
+  </div>
+
+
+  {% else %}
+  <link rel="icon" type="image/png" href="static/images/icons/dash_logo.png" />
+  <link rel="stylesheet" type="text/css" href="static/css/util.css">
+  <link rel="stylesheet" type="text/css" href="static/css/main.css">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <!-- <link rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/demo/css/style.css"> -->
+  <link rel="stylesheet" media="screen" href="static/css/login.css">
+  <div id="particles-js">
+    <div class="LoginContainer gradient-border" id="box">
+      <div class="loginInner">
+        <form class="login100-form validate-form flex-sb flex-w">
+          <span class="login100-form-title p-b-53">Welcome to Dash</span>
+          <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn-google m-b-20">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">Login
+            with Google</a>
+        </form>
+      </div>
+    </div>
+  </div>
   </div>
 
 
