--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="{% static 'todo/styles.css' %}" />
 </head>
 
-<body>
+<body style = "background-color: #EEEEEE;">
 			{% if user.is_authenticated %}
 	<nav class="navbar navbar-expand-lg navbar-dark" style="background: #3B8DE1;">
 		<a class="navbar-brand" href="..">Dash</a>
