--- a/calendarMod/templates/calendar/index.html
+++ b/calendarMod/templates/calendar/index.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style = "background: #3B8DE1;">
+
+
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+
+    {% if user.is_authenticated %}
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background: #3B8DE1;">
         <a class="navbar-brand" href="/">Dash</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,8 +35,8 @@
                     <a class="nav-link" href="/grades">Grades</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="/calendar">Events</a>
-              </li>
+                    <a class="nav-link" href="/calendar">Events</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/calendar/view">Calendar</a>
                 </li>
@@ -56,36 +66,29 @@
             </ul>
         </div>
     </nav>
-
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-
+     <!-- Logout Modal-->
+     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+     <div class="modal-dialog" role="document">
+         <div class="modal-content">
+             <div class="modal-header">
+                 <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                 <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                     <span aria-hidden="true">×</span>
+                 </button>
+             </div>
+             <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+             <div class="modal-footer">
+                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                 <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+             </div>
+         </div>
+     </div>
+ </div>
     <div class="container" id="container1">
-        {% if user.is_authenticated %}
 
+
+       
 
         <div class="container">
             <!-- <a href="{% url 'gohome2' %}">Back</a> -->
@@ -100,8 +103,8 @@
                 <!-- <h4 style="font-size: 20px;">Here are your upcoming events:</h4> -->
                 <div class="upcoming" style="font-size: 20px;">
                     Here are your upcoming events:
-                    <div class="delete" style = "position: relative; top: -5px;">
-                        <a class="btn btn-info left" id = "bruh2" href="{% url 'delete_all' %}"> Delete All</a> <br>
+                    <div class="delete" style="position: relative; top: -5px;">
+                        <a class="btn btn-info left" id="bruh2" href="{% url 'delete_all' %}"> Delete All</a> <br>
                     </div>
                 </div>
             </div>
@@ -156,11 +159,11 @@
 
                     </form> -->
                     <div class="view" style="padding-top: 5px;">
-                        <a class="btn btn-info left" id = "bruh2" href="{% url 'auth' %}">Import Events</a>
+                        <a class="btn btn-info left" id="bruh2" href="{% url 'auth' %}">Import Events</a>
                     </div>
 
                 </div>
-                <div class="col-sm" style = "border-left: 1px solid black;">
+                <div class="col-sm" style="border-left: 1px solid black;">
                     <div style="width: 225px; margin: 0 auto; font-size: 20px; padding-bottom: 20px;">
                         View your events in a calendar type view!
                         <!-- <div style = "padding-top: 40px;">
@@ -171,7 +174,7 @@
                         </form>
                     </div> -->
                         <div class="view" style="padding-top: 43px;">
-                            <a class="btn btn-info left" id = "bruh2" href="{% url 'calendar' %}">View Calendar</a>
+                            <a class="btn btn-info left" id="bruh2" href="{% url 'calendar' %}">View Calendar</a>
                         </div>
                     </div>
                 </div>
@@ -186,20 +189,54 @@
                             </form>
                         </div> -->
                         <div class="view" style="padding-top: 14px;">
-                            <a class="btn btn-info left" id = "bruh2" href="{% url 'new_event' %}">Create New Event</a>
+                            <a class="btn btn-info left" id="bruh2" href="{% url 'new_event' %}">Create New Event</a>
                         </div>
                     </div>
                 </div>
-               
+
             </div>
         </div>
-        {% else %}
-        <h1>Please log in to see your Personal Dashboard</h1>
-        <a href="{% url 'social:begin' 'google-oauth2' %}">
-            Login
-        </a>
-        {% endif %}
     </div>
+    {% else %}
+    <link rel="icon" type="image/png" href="static/images/icons/dash_logo.png" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- <link rel="stylesheet" media="screen" href="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/demo/css/style.css"> -->
+    <link rel="stylesheet" media="screen" href="{% static 'css/login.css' %}">
+    <div id="particles-js">
+        <div class="LoginContainer gradient-border" id="box">
+            <div class="loginInner">
+                <form class="login100-form validate-form flex-sb flex-w">
+                    <span class="login100-form-title p-b-53">Welcome to Dash</span>
+                    <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn-google m-b-20">
+                        <img
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">Login
+                        with Google</a>
+                </form>
+            </div>
+        </div>
+    </div>
+    </div>
+
+
+
+    <!-- scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/demo/js/app.js"></script>
+
+    <!-- stats.js -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/demo/js/lib/stats.js"></script>
+    <script>
+        particlesJS.load('particles-js', "{% static 'particles.json' %}", function () {
+            console.log('callback - particles.js config loaded');
+        });
+        requestAnimationFrame(update);
+    </script>
+
+    {% endif %}
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
