fixed faulty link on home page

--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -152,7 +152,7 @@
   <div class="footer" style="position: fixed; bottom: 0; text-align: center; left: 0; width: 100%">
     <center>
       <p>&copy asdfghjkl 2020</p>
-      <p><a href="icons8.com/">Icons courtesy of icons8.com</a></p>
+      <p><a href="https://www.icons8.com/">Icons courtesy of icons8.com</a></p>
     </center>
   </div>
 
